@@ -43,5 +43,6 @@ To add a bit of spit and polish to our Kirby experience, we use the following ha
 + [Alphabetise](https://github.com/shoesforindustry/kirby-plugins-alphabetise) _by [Russ Baldwin](http://shoesforindustry.net/)_
 + [Cachebuster](https://github.com/getkirby-plugins/cachebuster-plugin) _by [Bastian Allgeier](https://bastianallgeier.com/)_
 + [Kirby GA](https://github.com/jenstornell/kirby-ga) _by [Jens Törnell](http://www.jenst.se/)_
++ [Kirby XML Sitemap](https://github.com/pedroborges/kirby-xml-sitemap) _by [Pedro Borges](https://pedroborg.es/)_
 
 And finally, god bless [BBEdit](http://www.barebones.com/products/bbedit/).
