@@ -24,6 +24,7 @@ Sources: _$s
 + Updated and expanded dozens of existing entries
 + Legacy domain links now redirect to [newtonglossary.com](http://newtonglossary.com/)
 + Implemented [Kirby GA](https://github.com/jenstornell/kirby-ga) plugin for [Google Analytics](https://www.google.com/analytics/) integration
++ Implemented [Kirby XML Sitemap](https://github.com/pedroborges/kirby-xml-sitemap) plugin for search engine indexing
 
 ## 16 January 2017
 
